--- a/CSS/style.css
+++ b/CSS/style.css
@@ -277,11 +277,14 @@ h2 {
     
     .slide-text {
         width: 60%;
-        margin-top: -50px;
+        margin-bottom: -150px;
         margin-left: 50px;
         z-index: 20;
     }
-    
+    .slide {
+        z-index: -1;
+    }
+
 }
 
 
@@ -305,7 +308,7 @@ h2 {
 @media only screen and (max-width: 768px) {
     
     .section {
-        height: 500px;
+        height: 1200px;
     }
     .container {
         flex-direction: column;
@@ -325,12 +328,13 @@ h2 {
     
     
     /*START Events*/
-.Event-text {
+
+    .Event-text {   
     display: block;
     padding: 50px;
 	margin-top: 50px;
 }
-#sec3 {
+    #sec3 {
 	height: 1000px;
 }
 
@@ -339,9 +343,6 @@ h2 {
 /* END Events */
 /* START Blog*/
 
-#sec4 {
-	height: 1000px;
-}
 
 
 /* END Blog */
