--- a/CSS/style.css
+++ b/CSS/style.css
@@ -293,6 +293,20 @@ h2 {
     .blog-img {
         width: 50%;
     }
+    
+    .footer {
+        flex-direction: column;
+        height: auto !important;
+
+    }
+    
+    .footer-row {
+    display: block !important;
+    align-self: center;
+    width: 100% !important;
+    text-align: center !important;
+    margin-top: 20px;
+    }
 }
 
 /* Mobile Responsive */
@@ -343,14 +357,13 @@ h2 {
 
     }
     
-    .footer {
-        flex-direction: column;
-        height: auto !important;
-        justify-content: center;
-    }
     
-    .footer-row {
-        width: 100% !important;
+
+
+
+
+ 
+
     }
      
      /*START Slides*/
@@ -386,6 +399,7 @@ h2 {
 
 
 /*----------- Start Footer--------- */
+
 .footer { 
     display: flex;
     width: 100%;
@@ -393,16 +407,13 @@ h2 {
     color: #777;
     text-align: center;
 	height: 250px;
-	margin: 0;
-    padding: 30px 0 0 0;
 }
 
 
 
 .footer-row {
     display: inline-block;
-    margin: 10px;
-    width: 25%;
+    width: 20%;
     text-align: left;
 }
 .footer-row h5{
