--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,7 @@ h1 {
     font-size: 58px !important;
 }
 
-h4 {
+h2, h4 {
     font-family:'Covered By Your Grace', cursive !important;
     font-size: 32px !important;
     color: #000 !important;
