--- a/CSS/navigation.css
+++ b/CSS/navigation.css
@@ -32,6 +32,7 @@
     background: -webkit-linear-gradient(top, rgba(0,0,0,0.65) 7%,rgba(0,0,0,0.44) 35%,rgba(0,0,0,0) 92%,rgba(0,0,0,0) 100%,rgba(0,0,0,0) 101%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, rgba(0,0,0,0.65) 7%,rgba(0,0,0,0.44) 35%,rgba(0,0,0,0) 92%,rgba(0,0,0,0) 100%,rgba(0,0,0,0) 101%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+	z-index: 20000;
 }
 
 #navigation nav {
