--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,6 +93,7 @@ h2, h4 {
     background-image: url(../images/nichlas-andersen-415226-unsplash.jpg);
     background-repeat: no-repeat;	
     background-size: cover;
+	background-attachment: fixed;
 }
 
 
@@ -105,7 +106,7 @@ h2, h4 {
     text-align: right;
     color: #fff;
     font-size: 52px;
-	background-size: cover;
+	background-size: cover;	
 }
 
 
