--- a/CSS/style.css
+++ b/CSS/style.css
@@ -159,7 +159,7 @@ h2, h4 {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 20px;
+    padding: 150px 20px;
     border-radius: 0;
     width: 40% !important;
     height: 100%;
@@ -302,7 +302,7 @@ h2, h4 {
         z-index: 100
     }
     
-
+    
 }
 
 
@@ -329,6 +329,8 @@ h2, h4 {
     text-align: center !important;
     margin-top: 20px;
     }
+    
+    
 }
 
 /* Mobile Responsive */
@@ -405,7 +407,9 @@ h2, h4 {
 }
 
     
-    
+  .card {
+        padding: 20px 0px;
+    }  
     
     /*START Events*/
 
