--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,12 +109,13 @@ p {
 .top-right {
     font-family: 'Covered By Your Grace', cursive;
     text-align: center;
-    color: #fff;
+    color: #000;
     font-size: 52px;	
     background-image: url(../images/fa109036d6257a073831e628218f5b02.png);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 20px;
+    background-position: center center;
+    padding: 100px;
 }
 
 
@@ -416,7 +417,7 @@ p {
 
 
     .share-btn {
-    margin-top: 0px;
+    display: none;
 }
  
      /*START Slides*/
@@ -478,6 +479,7 @@ p {
     font-size: 22px;
     font-weight: 700;
     padding-bottom: 10px;
+    margin-left: 40px;
 }
 
 .footer-row ul li {
