--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,7 +53,7 @@ p {
 
 .container {
     height: 500px;
-    width: 90;
+    width: 90%;
     padding: 50px 15px;
     margin-right: auto;
     margin-left: auto;
@@ -197,7 +197,7 @@ p {
     flex-direction: column;
     height: auto;
     margin: 10px 0;
-    border: 1px solid dotted #777;
+    border: 1px solid #777;
     padding-left: 5px;
     transition: all 0.3s ease 0s;
     background-color: #fff;
